# ecode

./: .gitignore  CMakeLists.txt  README.md  build.ninja  chest.ninja
src/: ecode.cpp  ecode.h  utils.cpp  utils.h
test/: test_ecode.cpp
